--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "contentful": "^11.4.4",
     "react": "18.3.1",
     "react-native": "0.77.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.22.1",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-safe-area-context": "^5.1.0",
