--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
-
+apply plugin: 'com.google.gms.google-services'
 /**
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
@@ -73,13 +73,15 @@ def enableProguardInReleaseBuilds = false
 def jscFlavor = 'org.webkit:android-jsc:+'
 
 android {
+
+   
     ndkVersion rootProject.ext.ndkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.shoppy"
+    namespace "com.shoppingc"
     defaultConfig {
-        applicationId "com.shoppy"
+        applicationId "com.shoppingc"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -109,6 +111,7 @@ android {
 
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
+    
     implementation("com.facebook.react:react-android")
 
     if (hermesEnabled.toBoolean()) {
@@ -116,4 +119,13 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+     // Import the Firebase BoM (Bill of Materials)
+    implementation platform('com.google.firebase:firebase-bom:33.8.0')
+     implementation 'com.google.android.gms:play-services-auth:20.7.0'
+    implementation 'com.google.firebase:firebase-auth:22.1.2'
+    // Add the Firebase Analytics SDK
+    // implementation 'com.google.firebase:firebase-analytics'
+
+    // Add other Firebase SDKs if required
+    // Example: implementation 'com.google.firebase:firebase-auth'
 }
