--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/hooks": "github:react-native-community/hooks",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
@@ -20,6 +22,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.22.1",
     "react-native-html-to-pdf": "^0.12.0",
+    "react-native-image-picker": "^7.2.3",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-share": "^12.0.3",
