--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,13 +6,14 @@ buildscript {
         targetSdkVersion = 35
         ndkVersion = "28.0.12916984"
         kotlinVersion = "2.0.21"
+        googlePlayServicesAuthVersion = "20.7.0"
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath ("com.google.gms:google-services:4.4.2")
+        classpath 'com.google.gms:google-services:4.4.2'
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
